<resources>
    <string name="app_name">CarbonTracker</string>
    <string name="create_car_journey">Create New Journey</string>
    <string name="vehicle_year">Vehicle Year:</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="cancel">Cancel</string>
    <string name="vehicle_make">Vehicle Make:</string>
    <string name="vehicle_model">Vehicle Model:</string>
    <string name="show_graph">Show Graph</string>
    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="name">Name:</string>
    <string name="car_name">Car Name</string>
    <string name="display_carbon_footprint">Display Carbon Footprint</string>
    <string name="textview">TextView</string>
    <string name="headersForRoute">Route Name,   City Driving,   Highway Driving</string>
    <string name="add_journey">Add Journey</string>
    <string name="canceladdjourney">Cancel</string>
    <string name="name_this_journey">Name this Journey:</string>
    <string name="show_hwy_emission">show_hwy_emission</string>
    <string name="show_total_emission">show_total_emission</string>
    <string name="city_emissions">City Emissions</string>
    <string name="highway_emissions">Highway Emissions</string>
    <string name="total_emissions_for_this_journey">Total Emissions for this Journey</string>
    <string name="show_vehicle_name">show vehicle name</string>
    <string name="show_route_name">show route name</string>
    <string name="select_date">Select Date</string>
    <string name="select_a_date">Select a Date</string>
    <string name="transportation_mode">Transportation mode</string>
    <string name="route">Route</string>
    <string name="add_route">Add Route</string>
    <string name="cancelAddRoute">Cancel</string>
    <string name="route_name">Route Name</string>
    <string name="city_driving_distance_km">City Driving Distance (km)</string>
    <string name="highway_driving_distance_km">Highway Driving Distance (km)</string>
    <string name="carbon_tracker">Carbon Tracker</string>
    <string name="select_route_to_destination">Select Route to Destination</string>
    <string name="cancelSelectRoute">Cancel</string>
    <string name="add_new_route">Add New Route</string>
    <string name="select_vehicle_for_journey">Select Vehicle for Journey</string>
    <string name="cancelSelectVehicle">Cancel</string>
    <string name="add_new_vehicle">Add New Vehicle</string>
    <string name="add_new_bill">Add New Bill</string>
    <string name="of_people"># of People</string>
    <string name="of_people_in_household"># of people in household</string>
    <string name="natural_gas_use_gj">Natural Gas Use (GJ):</string>
    <string name="electricity_use_kwh">Electricity Use (kWh):</string>
    <string name="electricity_in_kwh">Electricity in kWh</string>
    <string name="natural_gas_in_gj">Natural Gas in GJ</string>
    <string name="emissions_per_person">Emissions Per Person:</string>
    <string name="create_new_bill">Create New Bill</string>
    <string name="add_bill">Add Bill</string>
    <string name="cancelBill">Cancel</string>
    <string name="natural_gas_emissions">Natural Gas Emissions:</string>
    <string name="electricity_emissions">Electricity Emissions:</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="total_emissions_per_person">Total Emissions Per Person</string>
    <string name="emissions_from_journeys">Emissions From Journeys</string>
    <string name="_0_kgco2">0 kgCO2</string>
    <string name="total_emissions">Total Emissions</string>
    <string name="emissions_from_utilities">Emissions From Utilities</string>
    <string name="natural_gas_emissions_kg_of_c02">Natural Gas Emissions (kg of C02):</string>
    <string name="electricity_emissions_kg_of_c02">Electricity Emissions (kg of C02):</string>
    <string name="emissions_for_a_single_day">Emissions For a single day</string>
    <string name="emissions_from_previous_days">Emissions From Previous Days</string>
    <string name="emissions_history">Emissions history</string>
    <string name="emissions_for_single_day">Emissions For Single Day</string>
    <string name="pushNotificationBills">You haven\'t entered any utility bills for today</string>
    <string name="AddMoreBills">Add More Bills</string>
    <string name="pushNotificationJourneys">You have entered %1$d journey(s) for today</string>
    <string name="AddMoreJourneys">Add More Journeys</string>
    <string name="walkingTip">You generated %.2f kgCO2 in a single journey, consider walking to reduce your emissions</string>
    <string name="busTip">You generated %.2f kgCO2 in a single journey, consider taking the bus to reduce your emissions</string>
    <string name="bikeTip">You generated %.2f kgCO2 in a single journey, consider biking to reduce your emissions</string>
    <string name="stayTip">You generated %.2f kgCO2 in a single journey, consider staying at home instead</string>
    <string name="lightTip">You generated %.2f kgCO2 in a day, consider turning off the lights during the day to help with your emissions</string>
    <string name="blanketTip">You generated %.2f kgCO2 in a day, consider using a blanket instead of turning down the heat</string>
    <string name="clothesTip">You generated  %.2f kgCO2 in a day, consider wearing more clothes instead of turning up the heat</string>
    <string name="insulateTip">You generated  %.2f kgCO2 in a day, consider insulating your home to reduce drafts and air leaks instead of turning up the heat</string>
    <string name="appliancesTip">You generated  %.2f kgCO2 in a day, consider purchasing appliances that have superior efficiency</string>
    <string name="solarTip">You generated  %.2f kgCO2 in a day, consider installing solar panels to your roof</string>
    <string name="waterTip">You generated  %.2f kgCO2 in a day, consider taking shorter baths</string>
    <string name="pleaseEnterDate">Please enter a date</string>
    <string name="pleaseEnterElectricity">Please enter your electricity usage</string>
    <string name="pleaseEnterGas">Please enter your natural gas usage</string>
    <string name="pleaseEnterPeople">Please enter the number of people in your household</string>
    <string name="pleaseSelectDate">Please select date</string>
    <string name="enter_bill_info">Enter Bill Info</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="days">days</string>
    <string name="naturalgas">Natural Gas</string>
    <string name="skytrain">Skytrain</string>
    <string name="bus">Bus</string>
    <string name="electricity">Electricity</string>
    <string name="totalcarbonemissions">Total Carbon Emissions</string>
    <string name="walk_bike">Walk/Bike</string>
    <string name="journeys">Journeys</string>
    <string name="bills">Bills</string>
    <string name="totalCO2Emissions">Total CO2 Emissions</string>
    <string name="carbonEmissions">Carbon Emissions</string>
    <string name="co2emissionsforday">CO2 Emissions for Day</string>
    <string name="electricityemissions">Electricity Emissions</string>
    <string name="naturalgasemissions">Natural Gas Emissions</string>
    <string name="kgOfCO2by">kg of CO2, by</string>
    <string name="kwhElectricityFrom">kWh of electricity, From:</string>
    <string name="too">To:</string>
    <string name="with">with</string>
    <string name="persons">person(s)</string>
    <string name="GJofNaturalGasFrom">GJ of natural gas, From:</string>
    <string name="totalDays">Total Days:</string>
    <string name="kgC02City">kg of CO2 by city,</string>
    <string name="kgC02highway">kg of CO2 by highway</string>
    <string name="carbon_tracker_v1_0">Carbon Tracker V1.0</string>
    <string name="created_in_2017">Created in 2017</string>
    <string name="leave_us_a_rating">Leave us a rating</string>
    <string name="icons_by_freepik">Icons by Freepik</string>
    <string name="end_datebill">End Date</string>
    <string name="start_datebill">Start Date</string>
    <string name="nowDisplayingkgco2">Now displaying emissions in Kg of CO2</string>
    <string name="nowdisplayingtrees">Now displaying emissions in Trees</string>
    <string name="unit_kg_co2">Unit: Kg CO2</string>
    <string name="unit_trees">Unit: Trees</string>
    <string name="trees">trees</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="journey_options">Journey Options</string>
    <string name="bill_options">Bill Options</string>
    <string name="trees_by_highway">trees by highway</string>
    <string name="trees_by_city">trees by city</string>
    <string name="trees_by">trees, by</string>
    <string name="total_electricity_emissions">Total Electricity Emissions</string>
    <string name="total_naturalGas_emissions">Total Natural Gas Emissions</string>
    <string name="route_mode">Route Mode</string>
    <string name="target_emissions">Target Emissions</string>
    <string name="average_emissions">Average Emissions</string>
    <string name="tree">trees</string>
    <string name="billadded">Bill added to Carbon Footprint</string>
    <string name="journeynameempty">Journey name cannot be empty.</string>
    <string name="selectDateplease">Please select date.</string>
    <string name="routeNameEmpty">Route name cannot be empty.</string>
    <string name="DistanceEmpty">Distance cannot be empty.</string>
    <string name="distanceZero">Distance cannot be 0.</string>
    <string name="routeOptions">Route Options</string>
    <string name="vehicleOptions">Vehicle Options</string>
</resources>