<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_vehicle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sfu.cmpt276.carbontracker.AddVehicleActivity">

    <Button
        android:text="@string/add_vehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/buttonAddVehicle" />

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCancel"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/buttonAddVehicle" />

    <TextView
        android:text="@string/vehicle_make"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinnerSelectMake"
        android:layout_alignParentStart="true"
        android:id="@+id/textSelectMake"
        android:textSize="18sp" />

    <TextView
        android:text="@string/vehicle_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSelectMake"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp"
        android:id="@+id/textSelectModel"
        android:textSize="18sp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerSelectModel"
        android:layout_alignTop="@+id/textSelectModel"
        android:layout_alignStart="@+id/buttonCancel" />

    <TextView
        android:text="@string/vehicle_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerSelectModel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp"
        android:id="@+id/textSelectYear"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerSelectYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/spinnerSelectModel"
        android:layout_alignTop="@+id/textSelectYear" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerSelectMake"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/spinnerSelectModel" />

    <ListView
        android:id="@+id/listviewCars"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:footerDividersEnabled="true"
        android:layout_below="@+id/spinnerSelectYear"
        android:layout_alignParentStart="true"
        android:layout_marginTop="61dp" />

</RelativeLayout>
