<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_route"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/route"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="?android:attr/actionBarSize"
    android:layout_marginTop="?android:attr/actionBarSize"
    tools:context="sfu.cmpt276.carbontracker.AddRouteActivity">

    <Button
        android:id="@+id/buttonAddRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/add_route" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/buttonAddRoute"
        android:text="@string/cancelAddRoute" />

    <TextView
        android:id="@+id/textRouteName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/route_name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textRouteCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textRouteName"
        android:layout_marginTop="50dp"
        android:text="@string/city_driving_distance_km"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textRouteHwy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textRouteCity"
        android:layout_marginTop="50dp"
        android:text="@string/highway_driving_distance_km"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/route_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textRouteCity"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textRouteName"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/route_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textRouteCity"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textRouteCity"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/route_hwy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/route_city"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textRouteHwy"
        android:ems="10"
        android:inputType="numberDecimal" />
</RelativeLayout>
