<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newlogo"
    tools:context="sfu.cmpt276.carbontracker.SingleDayGraphActivity"
    android:paddingTop="?android:attr/actionBarSize"
    android:layout_marginTop="?android:attr/actionBarSize">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="133dp"
                    android:layout_height="wrap_content"
                    android:text="@string/select_a_date"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/selectDateForGraph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/select_date"
                    android:imeOptions="actionDone"
                    android:textAlignment="center" />

            </LinearLayout>

            <Switch
                android:id="@+id/switchRouteMode"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:text="@string/route_mode" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/piechart"
                android:layout_width="368dp"
                android:layout_height="411dp"
                android:layout_marginTop="8dp"
                android:layout_weight="6.46"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:layout_editor_absoluteX="8dp"></com.github.mikephil.charting.charts.PieChart>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewJourneyCO2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emissions_from_journeys"
                    android:textAlignment="textStart"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewJourneyCO2Number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_0_kgco2"
                    android:textAlignment="textEnd"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewUtilitiesCO2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emissions_from_utilities"
                    android:textAlignment="textStart"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewUtilitiesCO2Number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_kgco2"
                    android:textAlignment="textEnd"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTotalCO2"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_emissions"
                    android:textAlignment="textStart"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewTotalCO2Number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_0_kgco2"
                    android:textAlignment="textEnd"
                    android:textSize="24sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
